--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2018-beta-5b"
+    id "jaci.openrio.gradle.GradleRIO" version "2017.11.27"
 }
 
 def TEAM = 6223
@@ -28,7 +28,7 @@ deploy {
 dependencies {
     compile wpilib()
 //    compile ctre()
-    compile navx(), bare
+    //compile navx(), bare
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
